--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
 			                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
 			                    <i class="fa fa-bars"></i>
 			                </button>
-			                <a class="navbar-brand" href="index.html">tekds</a>
+			                <a class="navbar-brand" href="index.html">
+								<img src="assets/images/logo.png" alt="tekds"/>
+							</a>
 			            </div><!--/.navbar-header-->
 			            <!-- End Header Navigation -->
 
@@ -81,7 +83,6 @@
 			                    <li class=" smooth-menu"><a href="#about">about</a></li>
 			                    <li class="smooth-menu"><a href="#services">services</a></li>
 								<li class="smooth-menu"><a href="#why">why tek</a></li>
-			                    <li class="smooth-menu"><a href="#portfolio">portfolio</a></li>
 			                    <li class="smooth-menu"><a href="#contact">contact</a></li>
 			                </ul><!--/.nav -->
 			            </div><!-- /.navbar-collapse -->
@@ -116,7 +117,7 @@
 			<div class="container">
 				<div class="about-content">
 					<div class="row">
-						<div class="col-sm-6">
+						<div class="col-sm-7">
 							<div class="single-about-txt">
 								<div class="row">
 									<p>
@@ -139,7 +140,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-sm-offset-1 col-sm-5">
+						<div class="col-sm-offset-1 col-sm-4">
 							<div class="single-about-img">
 								<img src="assets/images/about/profile_image.jpg" alt="profile_image">
 							</div>
@@ -242,75 +243,6 @@
 		</section><!--/.why-->
 		<!--why end -->
 		
-		
-		<!--portfolio start -->
-		<section id="portfolio" class="portfolio">
-			<div class="portfolio-details">
-				<div class="section-heading text-center">
-					<h2>portfolio</h2>
-				</div>
-				<div class="container">
-					<div class="portfolio-content">
-						<div class="isotope">
-							<div class="row">
-								<div class="col-sm-4">
-									<div class="item">
-										<img src="assets/images/portfolio/p1.jpg" alt="portfolio image"/>
-										<div class="isotope-overlay">
-											<a href="#">
-												ui/ux design
-											</a>
-										</div><!-- /.isotope-overlay -->
-									</div><!-- /.item -->
-									<div class="item">
-										<img src="assets/images/portfolio/p2.jpg" alt="portfolio image"/>
-										<div class="isotope-overlay">
-											<a href="#">
-												ui/ux design
-											</a>
-										</div><!-- /.isotope-overlay -->
-									</div><!-- /.item -->
-								</div><!-- /.col -->
-
-								<div class="col-sm-4">
-									<div class="item">
-										<img src="assets/images/portfolio/p3.jpg" alt="portfolio image"/>
-										<div class="isotope-overlay">
-											<a href="#">
-												web design
-											</a>
-										</div><!-- /.isotope-overlay -->
-									</div><!-- /.item -->
-								</div><!-- /.col -->
-
-								<div class="col-sm-4">
-									<div class="item">
-										<img src="assets/images/portfolio/p4.jpg" alt="portfolio image"/>
-										<div class="isotope-overlay">
-											<a href="#">
-												web development
-											</a>
-										</div><!-- /.isotope-overlay -->
-									</div><!-- /.item -->
-									<div class="item">
-										<img src="assets/images/portfolio/p5.jpg" alt="portfolio image"/>
-										<div class="isotope-overlay">
-											<a href="#">
-												web development
-											</a>
-										</div><!-- /.isotope-overlay -->
-									</div><!-- /.item -->
-								</div><!-- /.col -->
-							</div><!-- /.row -->
-						</div><!--/.isotope-->
-					</div><!--/.gallery-content-->
-					
-				</div><!--/.container-->
-			</div><!--/.portfolio-details-->
-
-		</section><!--/.portfolio-->
-		<!--portfolio end -->
-
 		<!--contact start -->
 		<section id="contact" class="contact">
 			<div class="section-heading text-center">
@@ -329,7 +261,7 @@
 						<div class="col-md-offset-1 col-md-5 col-sm-6">
 							<div class="single-contact-box">
 								<div class="contact-form">
-									<form>
+									<form action="https://formsubmit.co/sales@tekdetailing.com" method="POST" >
 										<div class="row">
 											<div class="col-sm-6 col-xs-12">
 												<div class="form-group">
@@ -352,14 +284,14 @@
 										<div class="row">
 											<div class="col-sm-12">
 												<div class="form-group">
-													<textarea class="form-control" rows="8" id="comment" placeholder="Message" ></textarea>
+													<textarea class="form-control" rows="8" id="comment" placeholder="Message" name = "message"></textarea>
 												</div><!--/.form-group-->
 											</div><!--/.col-->
 										</div><!--/.row-->
 										<div class="row">
 											<div class="col-sm-12">
 												<div class="single-contact-btn">
-													<a class="contact-btn" href="#" role="button">submit</a>
+													<button type = "submit" class="contact-btn" href="#" role="button"/>SUBMIT</button>
 												</div><!--/.single-single-contact-btn-->
 											</div><!--/.col-->
 										</div><!--/.row-->
@@ -377,11 +309,12 @@
 									<div class="contact-add-info">
 										<div class="single-contact-add-info">
 											<h3>phone</h3>
-											<p>+91-987-123-6547</p>
+											<p>+1-650-741-1219</p>
+											<p>+91-98404 06150</p>
 										</div>
 										<div class="single-contact-add-info">
 											<h3>email</h3>
-											<p>support@tekdetailing.com</p>
+											<p>sales@tekdetailing.com</p>
 										</div>
 										<div class="single-contact-add-info">
 											<h3>website</h3>
@@ -391,11 +324,9 @@
 								</div><!--/.contact-adress-->
 								<div class="hm-foot-icon">
 									<ul>
-										<li><a href="#"><i class="fa fa-facebook"></i></a></li><!--/li-->
-										<li><a href="#"><i class="fa fa-dribbble"></i></a></li><!--/li-->
-										<li><a href="#"><i class="fa fa-twitter"></i></a></li><!--/li-->
-										<li><a href="#"><i class="fa fa-linkedin"></i></a></li><!--/li-->
-										<li><a href="#"><i class="fa fa-instagram"></i></a></li><!--/li-->
+										<li><a href="https://www.facebook.com/profile.php?id=61556604538566&mibextid=YMEMSu"  target="_blank"><i class="fa fa-facebook"></i></a></li><!--/li-->
+										<li><a href="https://www.linkedin.com/company/tek-detailing-solutions/" target="_blank"><i class="fa fa-linkedin"></i></a></li><!--/li-->
+										
 									</ul><!--/ul-->
 								</div><!--/.hm-foot-icon-->
 							</div><!--/.single-contact-box-->
